--- a/nhlapi.yaml
+++ b/nhlapi.yaml
@@ -8,7 +8,7 @@ info:
     email: thepuckluckemail@gmail.com
   license:
     name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
+    url: https://www.apache.org/licenses/LICENSE-2.0.html
 host: www.api.thepuckluck.com
 basePath: /api/v1
 tags:
@@ -19,7 +19,7 @@ tags:
 - name: teams
   description: access to team statistics
 schemes:
-- http
+- https
 paths:
   /players:
     get:
